Adjusted page spacing, added navigation panel and fixed nav locations

--- a/css/styles.css
+++ b/css/styles.css
@@ -614,10 +614,23 @@ progress {
   background-color: #fff;
   border: 1px solid var(--bs-border-color);
   border-radius: 0.375rem;
-  max-width: 100%;
-  height: 100%;
+  max-width: 25%;
+  height: 25%;
   margin-top: auto;
   margin-bottom: auto;
+}
+
+@media (max-width: 413px){
+  .img-horizontal {
+    padding: 0.25rem;
+    background-color: #fff;
+    border: 1px solid var(--bs-border-color);
+    border-radius: 0.375rem;
+    max-width: 90%;
+    height: 90%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 }
 
 .img-horizontal-conestoga {
@@ -11086,7 +11099,6 @@ header.masthead h1, header.masthead .h1 {
 
 .block-flex-img{
   display: flex;
-  margin-top: 3rem !important;
 }
 
 @media (max-width: 1199px){
@@ -11162,5 +11174,13 @@ header.masthead h1, header.masthead .h1 {
   .skill-card{
     width: 42%;
     margin: 1rem 10px 1rem 10px;
+  }
+}
+
+@media (max-width: 413px){
+  .nav-button-panel{
+    display: flex;
+    flex-direction: column;
+    gap: 12px; /* spacing without hacks */
   }
 }
